[package]
name = "safe-core-wrap-playground"
description = "Safe core wrap playground"
version = "0.0.1"

[dependencies]
polywrap = "0.1.9-beta.2"
polywrap_ethereum_wallet_plugin = "0.1.9-beta.2"

lazy_static = "1.4"
dotenv = "0.15"
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }

num-bigint = "0.4.3"

[[bin]]
name = "deploy-safe"
path = "src/protocol-kit/deploy-safe.rs"

[[bin]]
name = "paid-transaction"
path = "src/relay-kit/paid-transaction.rs"

[[bin]]
name = "sponsored-transaction"
path = "src/relay-kit/sponsored-transaction.rs"
