[package]
name = "account-abstraction-wrapper"
version = "0.0.1"
description = "Account abstraction rust wrapper"
authors = ["Polywrap"]
repository = "https://github.com/polywrap/account-abstraction"
license = "MIT"
edition = "2021"

[dependencies]
polywrap-wasm-rs = { version = "0.11.2" }
polywrap_msgpack_serde = "0.0.2-beta.7"
serde_bytes = "0.11.5"
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
