[package]
name = "account-abstraction-wrapper"
version = "0.0.1"
description = "Account abstraction rust wrapper"
authors = ["Polywrap"]
repository = "https://github.com/polywrap/safe-core-wrap"
license = "MIT"
edition = "2021"

[dependencies]
polywrap-wasm-rs = { version = "0.11.3" }
polywrap_msgpack_serde = "0.0.2-beta.7"
serde_bytes = "0.11.5"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
polywrap = "0.1.9-beta.2"
polywrap_ethereum_wallet_plugin = "0.1.9-beta.2"
dotenv = "0.15"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
