[package]
name = "account-abstraction-wrapper"
version = "0.0.1"
description = "Account abstraction rust wrapper"
authors = ["Polywrap"]
repository = "https://github.com/polywrap/account-abstraction"
license = "MIT"
edition = "2021"

[dependencies]
polywrap-wasm-rs = { version = "0.10.3" }
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
