[package]
name = "relay-kit-wrap"
version = "0.0.1"
description = "Relay Kit Wrap"
authors = ["Polywrap"]
repository = "https://github.com/polywrap/safe-core-wrap"
license = "MIT"
edition = "2021"

[dependencies]
polywrap-wasm-rs = { version = "0.11.3" }
polywrap_msgpack_serde = "0.0.2-beta.7"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
polywrap = "0.1.9-beta.2"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
